<resources>
    <string name="app_name">Pantroid</string>
    <string name="action_manage_types">Manage Types</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="title_activity_manage_types">ManageTypesActivity</string>
    <string name="save">Save</string>
    <string name="type_name_hint">Pantry item type name</string>
    <string name="edit_type_dialog_title">Edit type details</string>
    <string name="abandon_changes_dialog_title">Abandon changes</string>
    <string name="abandon_changes_dialog_message">You are going to abandon current changes. Are you sure?</string>
    <string name="edit_type_validation_error_text">Validation error</string>
    <string name="edit_type_type_not_found_text">Selected type not found</string>
    <string name="edit_type_item_saved_successfully">New type saved successfully</string>
    <string name="edit_type_item_saving_failed">New type saving failed</string>
    <string name="edit_item_name_label">Item name:</string>
    <string name="edit_item_name_hint">Enter item name here</string>
    <string name="edit_item_type_label">Item type</string>
    <string name="edit_item_adding_date_label">Item adding date</string>
    <string name="edit_item_bb_date_label">\"Best before\" date</string>
    <string name="edit_item_quantity_label">Item quantity</string>
    <string name="edit_item_no_types_error">Could not find any pantry item types!</string>
    <string name="enter_quantity_here">edit_item_quantity_hint</string>
</resources>
