<?xml version="1.0" encoding="utf-8"?>
<!--TODO: maybe ScrollView wrapping this would be better?-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wildeastcoders.pantroid.view.fragment.EditItemActivityFragment"
    tools:showIn="@layout/activity_edit_item">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/edit_item_name_label"/>

    <EditText
        android:id="@+id/et_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_item_name_hint"
        android:lines="1"
        android:maxLines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/edit_item_type_label"/>

    <Spinner
        android:id="@+id/sp_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/edit_item_adding_date_label"/>

    <Button
        android:id="@+id/btn_item_adding_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="adding date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/edit_item_bb_date_label"/>

    <Button
        android:id="@+id/btn_item_bb_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="best before date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/edit_item_quantity_label"/>

    <Button
        android:id="@+id/btn_item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="0"/>

</LinearLayout>
